fix scrolling on small screens

--- a/fnldoc/template/style.css
+++ b/fnldoc/template/style.css
@@ -224,6 +224,10 @@ ul ul {
     #toc {
         justify-self: stretch;
     }
+
+    #content {
+        overflow-y: visible;
+    }
 }
 
 
